# ESP32C3

./: .gitignore  README.md
embassy/basics/src/: main.rs
embassy/gpio/: Cargo.toml
embassy/gpio/src/: main.rs
embassy/timer/.cargo/: config.toml
embassy/timer/src/: main.rs
embassy/uart-echo/: Cargo.toml
embassy/uart/.cargo/: config.toml
embassy/uart/.github/workflows/: rust_ci.yml
embassy/uart/src/: main.rs
embassy_examples/basics/: Cargo.toml
embassy_examples/timer/: Cargo.toml
embassy_examples/uart/: Cargo.toml
embassy_examples/uart-echo/src/: main.rs
embassy_examples/uart/src/: main.rs
gpio/: Cargo.toml
gpio-interrupt/: Cargo.toml
gpio/src/: main.rs
i2c/: Cargo.toml
i2c/src/: main.rs
no_std_examples/adc_analog_temp/: Cargo.toml
no_std_examples/adc_analog_temp/src/: main.rs
no_std_examples/gpio-interrupt/src/: main.rs
no_std_examples/i2c/: Cargo.toml
no_std_examples/i2c/.cargo/: config.toml
no_std_examples/i2c/src/: main.rs
no_std_examples/pwm buzzer/src/: main.rs
no_std_examples/rmt/: Cargo.toml
no_std_examples/rmt/src/: main.rs
no_std_examples/rng/src/: main.rs  nmea.rs
no_std_examples/timer_polling/: Cargo.toml
no_std_examples/ultrasonic_timer/src/: main.rs
rmt/src/: main.rs
rng/: Cargo.toml
std_bt_examples/another/: Cargo.toml
std_bt_examples/ble-advertise/: Cargo.toml
std_bt_examples/ble-advertise/src/: main.rs
std_bt_examples/ble-client/: Cargo.toml
std_bt_examples/ble-client/src/: main.rs
std_bt_examples/ble-secure-client/: Cargo.toml
std_bt_examples/ble-secure-client/src/: main.rs
std_bt_examples/ble-secure-server/: Cargo.toml  sdkconfig.defaults
std_bt_examples/ble-secure-server/src/: main.rs
std_bt_examples/ble-server/: Cargo.toml
std_bt_examples/ble-server/src/: main.rs
std_bt_examples/ble_scan/: sdkconfig.defaults
std_bt_examples/ble_scan/.cargo/: config.toml
std_bt_examples/ble_scan/src/: main.rs
std_examples/adc/: Cargo.toml
std_examples/adc/src/: main.rs
std_examples/cli/: Cargo.toml  wokwi.toml
std_examples/cli/src/: main.rs
std_examples/gpio/src/: main.rs
std_examples/gpio_interrupt/: Cargo.toml
std_examples/gpio_interrupt/src/: main.rs
std_examples/http/: Cargo.toml
std_examples/http/src/: main.rs
std_examples/http_client/.github/workflows/: rust_ci.yml
std_examples/http_server/.cargo/: config.toml
std_examples/i2c/src/: main.rs
std_examples/mqtt-sub/src/: main.rs
std_examples/ping/: Cargo.toml  diagram.json
std_examples/ping-cli/: Cargo.toml  wokwi.toml
std_examples/ping-cli/src/: main.rs
std_examples/ping/.cargo/: config.toml
std_examples/ping/src/: main.rs
std_examples/pwm/: Cargo.toml
std_examples/pwm/src/: main.rs
std_examples/rtos_tasks/src/: main.rs
std_examples/spi/: Cargo.toml
std_examples/spi/src/: main.rs
std_examples/timer/src/: main.rs
std_examples/uart/: Cargo.toml
std_examples/uart/src/: main.rs
std_examples/wifi/: Cargo.toml
std_examples/wifi/.cargo/: config.toml
std_examples/wifi/src/: main.rs
std_examples/wifi_revisit/: Cargo.toml
std_examples/wifi_revisit/.cargo/: config.toml
std_net_examples/http_client/.cargo/: config.toml
std_net_examples/http_client/src/: main.rs
std_net_examples/http_server/: Cargo.toml
std_net_examples/http_server/src/: main.rs
std_net_examples/mqtt-sub/: Cargo.toml
std_net_examples/mqtt-sub/.cargo/: config.toml
std_net_examples/ntp/: Cargo.toml
std_net_examples/ntp/src/: main.rs
std_net_examples/ping/: Cargo.toml  wokwi.toml
std_net_examples/ping-cli/: diagram.json
std_net_examples/ping-cli/src/: main.rs
std_net_examples/ping/.cargo/: config.toml
std_net_examples/wifi/: Cargo.toml
std_net_examples/wifi_revisit/: wokwi.toml
std_net_examples/wifi_revisit/src/: main.rs
timer_polling/src/: main.rs
uart/: Cargo.toml
uart/src/: main.rs
ultrasonic_timer/: Cargo.toml
