[package]
name = "gpio"
version = "0.1.0"
authors = ["apollolabsdev <104051566+apollolabsdev@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = "0.9.0"
esp-backtrace = { version = "0.7.0", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = ["esp32c3"] }
critical-section = "1.1.1"
