[package]
name = "timer"
version = "0.1.0"
authors = ["apollolabsdev <apollolabs.bin@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = { version = "0.14.0", features = ["async", "embassy", "embassy-executor-thread", "embassy-time-timg0"] }
esp-backtrace      = { version = "0.9.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.1", features = ["esp32c3"] }
embassy-executor = { version = "0.4.0", features = ["nightly"] }
embassy-time = { version = "0.2.0" }
embassy-sync = "0.5.0"
embedded-hal-async = "=1.0.0-rc.2"
embedded-io-async = "0.6.1"
static_cell = { version = "2.0.0", features = ["nightly"] }