[package]
name = "timer_polling"
version = "0.1.0"
authors = ["apollolabsdev <104051566+apollolabsdev@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = "0.8.0"
esp-backtrace = { version = "0.6.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }